--- a/CSS/style.css
+++ b/CSS/style.css
@@ -107,6 +107,12 @@ body {
     border-radius: 20px;
     border: none;
     padding-left: 12px;
+    outline: none;
+}
+
+.search-container__input:hover {
+    box-shadow: 2px 2px 5px grey;
+    text-shadow: 1px 1px 1px rgb(192, 192, 192);
 }
 
 .img-search__container {
